Added damage and looting
Wrapped combat kills into a function that also provides looting.
Have done nothing with promotion or making looting NOT fixed!

--- a/GCrework.html
+++ b/GCrework.html
@@ -6,6 +6,7 @@
 		<title>TEST</title>
 		<link type="text/css" rel="stylesheet" href="resources/materialize/css/materialize.min.css" media="screen,projection" />
 		<link type="text/css" rel="stylesheet" href="GCrework.css" />
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	</head>
 
@@ -52,10 +53,6 @@
 						<tr class="green-text text-darken-4">
 							<td>soldier</td>
 							<td id="soldier-Total">0</td>
-						</tr>
-						<tr class="green-text text-darken-4">
-							<td>autogunner</td>
-							<td id="autogunner-Total">0</td>
 						</tr>
 						<tr class="green-text text-darken-4">
 							<td>corporal</td>
@@ -178,7 +175,11 @@
 											<th>Qty</th>
 										</tr>
 										<tr>
-											<td><a id="musterConscript" class="waves-effect waves-light btn">Conscript</a></td>
+											<td>
+												<a id="musterConscript" class="waves-effect waves-light btn">Conscript</a>
+												<a id="musterConscriptHalf" class="waves-effect waves-light btn"><i class="material-icons ">play_arrow</i></a>
+												<a id="musterConscriptFull" class="waves-effect waves-light btn"><i class="material-icons ">fast_forward</i></a>
+											</td>
 											<td><span id="musterConscriptDisplay">0</span></td>
 										</tr>
 										<tr>
