Split js into modules
Altered html to pull in order (hopefully dependency ok!)

--- a/GCrework.html
+++ b/GCrework.html
@@ -242,6 +242,8 @@
 		
 		<script type="text/javascript" src="resources/jquery-2.1.1.js"></script>
 		<script type="text/javascript" src="resources/materialize/js/materialize.min.js"></script>
-		<script type="text/javascript" src="GCrework.js"></script>
+		<script type="text/javascript" src="dataObjects.js"></script>
+		<script type="text/javascript" src="eventListeners.js"></script>
+		<script type="text/javascript" src="engine.js"></script>
 	</body>
 </html>
