Added more muster objects

--- a/GCrework.html
+++ b/GCrework.html
@@ -883,6 +883,38 @@
 										</tr>
 										<tr>
 											<td>
+												<a id="staffSergeant-muster-one" class="waves-effect waves-light btn btn-small">staffSergeant</a>
+												<a id="staffSergeant-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="staffSergeant-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="staffSergeant-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
+												<a id="lieutenant-muster-one" class="waves-effect waves-light btn btn-small">lieutenant</a>
+												<a id="lieutenant-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="lieutenant-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="lieutenant-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
+												<a id="captain-muster-one" class="waves-effect waves-light btn btn-small">captain</a>
+												<a id="captain-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="captain-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="captain-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
+												<a id="major-muster-one" class="waves-effect waves-light btn btn-small">major</a>
+												<a id="major-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="major-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="major-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
 												<a id="fireTeam-muster-one" class="waves-effect waves-light btn btn-small">Fire Team</a>
 												<a id="fireTeam-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
 												<a id="fireTeam-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
@@ -896,6 +928,118 @@
 												<a id="rifleSquad-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
 											</td>
 											<td><span id="rifleSquad-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
+												<a id="platoonHQ-muster-one" class="waves-effect waves-light btn btn-small">platoonHQ</a>
+												<a id="platoonHQ-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="platoonHQ-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="platoonHQ-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
+												<a id="riflePlatoon-muster-one" class="waves-effect waves-light btn btn-small">riflePlatoon</a>
+												<a id="riflePlatoon-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="riflePlatoon-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="riflePlatoon-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
+												<a id="mortarTeam-muster-one" class="waves-effect waves-light btn btn-small">mortarTeam</a>
+												<a id="mortarTeam-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="mortarTeam-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="mortarTeam-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
+												<a id="mortarSquad-muster-one" class="waves-effect waves-light btn btn-small">mortarSquad</a>
+												<a id="mortarSquad-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="mortarSquad-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="mortarSquad-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
+												<a id="mortarSection-muster-one" class="waves-effect waves-light btn btn-small">mortarSection</a>
+												<a id="mortarSection-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="mortarSection-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="mortarSection-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
+												<a id="assaultTeam-muster-one" class="waves-effect waves-light btn btn-small">assaultTeam</a>
+												<a id="assaultTeam-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="assaultTeam-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="assaultTeam-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
+												<a id="assaultSquad-muster-one" class="waves-effect waves-light btn btn-small">assaultSquad</a>
+												<a id="assaultSquad-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="assaultSquad-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="assaultSquad-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
+												<a id="assaultSection-muster-one" class="waves-effect waves-light btn btn-small">assaultSection</a>
+												<a id="assaultSection-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="assaultSection-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="assaultSection-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
+												<a id="mgTeam-muster-one" class="waves-effect waves-light btn btn-small">mgTeam</a>
+												<a id="mgTeam-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="mgTeam-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="mgTeam-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
+												<a id="mgSquad-muster-one" class="waves-effect waves-light btn btn-small">mgSquad</a>
+												<a id="mgSquad-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="mgSquad-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="mgSquad-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
+												<a id="mgSection-muster-one" class="waves-effect waves-light btn btn-small">mgSection</a>
+												<a id="mgSection-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="mgSection-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="mgSection-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
+												<a id="weaponsPlatoon-muster-one" class="waves-effect waves-light btn btn-small">weaponsPlatoon</a>
+												<a id="weaponsPlatoon-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="weaponsPlatoon-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="weaponsPlatoon-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
+												<a id="rifleCompanyHQ-muster-one" class="waves-effect waves-light btn btn-small">rifleCompanyHQ</a>
+												<a id="rifleCompanyHQ-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="rifleCompanyHQ-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="rifleCompanyHQ-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
+												<a id="rifleCompany-muster-one" class="waves-effect waves-light btn btn-small">rifleCompany</a>
+												<a id="rifleCompany-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="rifleCompany-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="rifleCompany-musterDisplay">0</span></td>
 										</tr>
 									</table>
 								</div>
