Added more objects
html page should have all data objects represented now. Adding the same to event listeners, up to mgSquad in Sergeant tier.

--- a/GCrework.html
+++ b/GCrework.html
@@ -532,7 +532,7 @@
 										data-delay="50"
 										data-html="true"
 										data-tooltip="<div class='left-text'>	Requirements:<br />
-																				2 Anit Armour Squads<br />
+																				2 Anti Armour Squads<br />
 																				1 Staff Sergeant</div>">
 										Form antiArmourSection
 									</a>
@@ -808,7 +808,7 @@
 										data-poisition="left"
 										data-delay="50"
 										data-html="true"
-										data-tooltip="<div class='left-text'>	Every x seconds will attempt to form 1 soldier if components available>">
+										data-tooltip="<div class='left-text'>	Every x seconds will attempt to form 1 soldier if components available</div>">
 										Barracks
 									</a>
 									<a	id="buyDrillSergeant" 
@@ -816,7 +816,7 @@
 										data-poisition="left"
 										data-delay="50"
 										data-html="true"
-										data-tooltip-content="Every x seconds will attempt to form 1 Fire Team if components available">
+										data-tooltip="<div class='left-text'>	Every x seconds will attempt to form 1 Fire Team if components available</div>">
 										Drill Sgt
 									</a>
 								</div>
@@ -1041,6 +1041,150 @@
 											</td>
 											<td><span id="rifleCompany-musterDisplay">0</span></td>
 										</tr>
+										<tr>
+											<td>
+												<a id="heavyMortarSquad-muster-one" class="waves-effect waves-light btn btn-small">heavyMortarSquad</a>
+												<a id="heavyMortarSquad-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="heavyMortarSquad-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="heavyMortarSquad-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
+												<a id="heavyMortarSectionHQ-muster-one" class="waves-effect waves-light btn btn-small">heavyMortarSectionHQ</a>
+												<a id="heavyMortarSectionHQ-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="heavyMortarSectionHQ-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="heavyMortarSectionHQ-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
+												<a id="heavyMortarSection-muster-one" class="waves-effect waves-light btn btn-small">heavyMortarSection</a>
+												<a id="heavyMortarSection-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="heavyMortarSection-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="heavyMortarSection-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
+												<a id="heavyMortarPlatoonHQ-muster-one" class="waves-effect waves-light btn btn-small">heavyMortarPlatoonHQ</a>
+												<a id="heavyMortarPlatoonHQ-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="heavyMortarPlatoonHQ-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="heavyMortarPlatoonHQ-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
+												<a id="heavyMortarPlatoon-muster-one" class="waves-effect waves-light btn btn-small">heavyMortarPlatoon</a>
+												<a id="heavyMortarPlatoon-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="heavyMortarPlatoon-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="heavyMortarPlatoon-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
+												<a id="antiArmourTeam-muster-one" class="waves-effect waves-light btn btn-small">antiArmourTeam</a>
+												<a id="antiArmourTeam-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="antiArmourTeam-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="antiArmourTeam-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
+												<a id="antiArmourSquad-muster-one" class="waves-effect waves-light btn btn-small">antiArmourSquad</a>
+												<a id="antiArmourSquad-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="antiArmourSquad-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="antiArmourSquad-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
+												<a id="antiArmourSection-muster-one" class="waves-effect waves-light btn btn-small">antiArmourSection</a>
+												<a id="antiArmourSection-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="antiArmourSection-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="antiArmourSection-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
+												<a id="antiArmourPlatoonHQ-muster-one" class="waves-effect waves-light btn btn-small">antiArmourPlatoonHQ</a>
+												<a id="antiArmourPlatoonHQ-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="antiArmourPlatoonHQ-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="antiArmourPlatoonHQ-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
+												<a id="towSquad-muster-one" class="waves-effect waves-light btn btn-small">towSquad</a>
+												<a id="towSquad-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="towSquad-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="towSquad-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
+												<a id="towSection-muster-one" class="waves-effect waves-light btn btn-small">towSection</a>
+												<a id="towSection-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="towSection-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="towSection-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
+												<a id="antiArmourPlatoon-muster-one" class="waves-effect waves-light btn btn-small">antiArmourPlatoon</a>
+												<a id="antiArmourPlatoon-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="antiArmourPlatoon-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="antiArmourPlatoon-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
+												<a id="hmgSquad-muster-one" class="waves-effect waves-light btn btn-small">hmgSquad</a>
+												<a id="hmgSquad-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="hmgSquad-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="hmgSquad-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
+												<a id="hmgSection-muster-one" class="waves-effect waves-light btn btn-small">hmgSection</a>
+												<a id="hmgSection-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="hmgSection-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="hmgSection-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
+												<a id="hmgPlatoonHQ-muster-one" class="waves-effect waves-light btn btn-small">hmgPlatoonHQ</a>
+												<a id="hmgPlatoonHQ-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="hmgPlatoonHQ-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="hmgPlatoonHQ-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
+												<a id="hmgPlatoon-muster-one" class="waves-effect waves-light btn btn-small">hmgPlatoon</a>
+												<a id="hmgPlatoon-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="hmgPlatoon-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="hmgPlatoon-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
+												<a id="weaponsCompanyHQ-muster-one" class="waves-effect waves-light btn btn-small">weaponsCompanyHQ</a>
+												<a id="weaponsCompanyHQ-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="weaponsCompanyHQ-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="weaponsCompanyHQ-musterDisplay">0</span></td>
+										</tr>
+										<tr>
+											<td>
+												<a id="weaponsCompany-muster-one" class="waves-effect waves-light btn btn-small">weaponsCompany</a>
+												<a id="weaponsCompany-muster-half" class="waves-effect waves-light btn btn-small"><i class="material-icons ">play_arrow</i></a>
+												<a id="weaponsCompany-muster-full" class="waves-effect waves-light btn btn-small"><i class="material-icons ">fast_forward</i></a>
+											</td>
+											<td><span id="weaponsCompany-musterDisplay">0</span></td>
+										</tr>
 									</table>
 								</div>
 								
@@ -1073,6 +1217,22 @@
 											<td>Sergeant</td>
 											<td id="sergeant-enemyDisplay">0</td>
 										</tr>
+										<tr id="staffSergeant-IsEnemyRow">
+											<td>staffSergeant</td>
+											<td id="staffSergeant-enemyDisplay">0</td>
+										</tr>
+										<tr id="lieutenant-IsEnemyRow">
+											<td>lieutenant</td>
+											<td id="lieutenant-enemyDisplay">0</td>
+										</tr>
+										<tr id="captain-IsEnemyRow">
+											<td>captain</td>
+											<td id="captain-enemyDisplay">0</td>
+										</tr>
+										<tr id="major-IsEnemyRow">
+											<td>major</td>
+											<td id="major-enemyDisplay">0</td>
+										</tr>
 										<tr id="fireTeam-IsEnemyRow">
 											<td>Fire Team</td>
 											<td id="fireTeam-enemyDisplay">0</td>
@@ -1080,6 +1240,134 @@
 										<tr id="rifleSquad-IsEnemyRow">
 											<td>Rifle Squad</td>
 											<td id="rifleSquad-enemyDisplay">0</td>
+										</tr>
+										<tr id="platoonHQ-IsEnemyRow">
+											<td>platoonHQ</td>
+											<td id="platoonHQ-enemyDisplay">0</td>
+										</tr>
+										<tr id="riflePlatoon-IsEnemyRow">
+											<td>riflePlatoon</td>
+											<td id="riflePlatoon-enemyDisplay">0</td>
+										</tr>
+										<tr id="mortarTeam-IsEnemyRow">
+											<td>mortarTeam</td>
+											<td id="mortarTeam-enemyDisplay">0</td>
+										</tr>
+										<tr id="mortarSquad-IsEnemyRow">
+											<td>mortarSquad</td>
+											<td id="mortarSquad-enemyDisplay">0</td>
+										</tr>
+										<tr id="mortarSection-IsEnemyRow">
+											<td>mortarSection</td>
+											<td id="mortarSection-enemyDisplay">0</td>
+										</tr>
+										<tr id="assaultTeam-IsEnemyRow">
+											<td>assaultTeam</td>
+											<td id="assaultTeam-enemyDisplay">0</td>
+										</tr>
+										<tr id="assaultSquad-IsEnemyRow">
+											<td>assaultSquad</td>
+											<td id="assaultSquad-enemyDisplay">0</td>
+										</tr>
+										<tr id="assaultSection-IsEnemyRow">
+											<td>assaultSection</td>
+											<td id="assaultSection-enemyDisplay">0</td>
+										</tr>
+										<tr id="mgTeam-IsEnemyRow">
+											<td>mgTeam</td>
+											<td id="mgTeam-enemyDisplay">0</td>
+										</tr>
+										<tr id="mgSquad-IsEnemyRow">
+											<td>mgSquad</td>
+											<td id="mgSquadv-enemyDisplay">0</td>
+										</tr>
+										<tr id="mgSection-IsEnemyRow">
+											<td>mgSection</td>
+											<td id="mgSection-enemyDisplay">0</td>
+										</tr>
+										<tr id="weaponsPlatoon-IsEnemyRow">
+											<td>weaponsPlatoon</td>
+											<td id="weaponsPlatoon-enemyDisplay">0</td>
+										</tr>
+										<tr id="rifleCompanyHQ-IsEnemyRow">
+											<td>rifleCompanyHQ</td>
+											<td id="rifleCompanyHQ-enemyDisplay">0</td>
+										</tr>
+										<tr id="rifleCompany-IsEnemyRow">
+											<td>rifleCompany</td>
+											<td id="rifleCompany-enemyDisplay">0</td>
+										</tr>
+										<tr id="heavyMortarSquad-IsEnemyRow">
+											<td>heavyMortarSquad</td>
+											<td id="heavyMortarSquad-enemyDisplay">0</td>
+										</tr>
+										<tr id="heavyMortarSectionHQ-IsEnemyRow">
+											<td>heavyMortarSectionHQ</td>
+											<td id="heavyMortarSectionHQ-enemyDisplay">0</td>
+										</tr>
+										<tr id="heavyMortarSection-IsEnemyRow">
+											<td>heavyMortarSection</td>
+											<td id="heavyMortarSection-enemyDisplay">0</td>
+										</tr>
+										<tr id="heavyMortarPlatoonHQ-IsEnemyRow">
+											<td>heavyMortarPlatoonHQ</td>
+											<td id="heavyMortarPlatoonHQ-enemyDisplay">0</td>
+										</tr>
+										<tr id="heavyMortarPlatoon-IsEnemyRow">
+											<td>heavyMortarPlatoon</td>
+											<td id="heavyMortarPlatoon-enemyDisplay">0</td>
+										</tr>
+										<tr id="antiArmourTeam-IsEnemyRow">
+											<td>antiArmourTeam</td>
+											<td id="antiArmourTeam-enemyDisplay">0</td>
+										</tr>
+										<tr id="antiArmourSquad-IsEnemyRow">
+											<td>antiArmourSquad</td>
+											<td id="antiArmourSquad-enemyDisplay">0</td>
+										</tr>
+										<tr id="antiArmourSection-IsEnemyRow">
+											<td>antiArmourSection</td>
+											<td id="antiArmourSection-enemyDisplay">0</td>
+										</tr>
+										<tr id="antiArmourPlatoonHQ-IsEnemyRow">
+											<td>antiArmourPlatoonHQ</td>
+											<td id="antiArmourPlatoonHQ-enemyDisplay">0</td>
+										</tr>
+										<tr id="towSquad-IsEnemyRow">
+											<td>towSquad</td>
+											<td id="towSquad-enemyDisplay">0</td>
+										</tr>
+										<tr id="towSection-IsEnemyRow">
+											<td>towSection</td>
+											<td id="towSection-enemyDisplay">0</td>
+										</tr>
+										<tr id="antiArmourPlatoon-IsEnemyRow">
+											<td>antiArmourPlatoon</td>
+											<td id="antiArmourPlatoon-enemyDisplay">0</td>
+										</tr>
+										<tr id="hmgSquad-IsEnemyRow">
+											<td>hmgSquad</td>
+											<td id="hmgSquad-enemyDisplay">0</td>
+										</tr>
+										<tr id="hmgSection-IsEnemyRow">
+											<td>hmgSection</td>
+											<td id="hmgSection-enemyDisplay">0</td>
+										</tr>
+										<tr id="hmgPlatoonHQ-IsEnemyRow">
+											<td>hmgPlatoonHQ</td>
+											<td id="hmgPlatoonHQ-enemyDisplay">0</td>
+										</tr>
+										<tr id="hmgPlatoon-IsEnemyRow">
+											<td>hmgPlatoon</td>
+											<td id="hmgPlatoon-enemyDisplay">0</td>
+										</tr>
+										<tr id="weaponsCompanyHQ-IsEnemyRow">
+											<td>weaponsCompanyHQ</td>
+											<td id="weaponsCompanyHQ-enemyDisplay">0</td>
+										</tr>
+										<tr id="weaponsCompany-IsEnemyRow">
+											<td>weaponsCompany</td>
+											<td id="weaponsCompany-enemyDisplay">0</td>
 										</tr>
 									</table>
 								</div>
